# python-stub

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: black.yml  build-docs.yml
doc/: README.md
doc/source/: conf.py
